--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,9 @@ wp-content/themes/twentyfourteen/
 wp-content/themes/twentyfifteen/
 
 # (not sure should use) ignore all files starting with . or ~
-# .*
-#  ~*
+.*
+~*
+.DS_Store
 
 # ignore node dependency directories (used by grunt)
 node_modules/
@@ -98,3 +99,4 @@ Thumbs.db
 !manifest.json
 !mstile-*.png
 !safari-pinned-tab.svg
+
